--- a/README.html
+++ b/README.html
@@ -369,14 +369,14 @@ ACS.</p></li>
 <code>crodriguezcabrera@g.harvard.edu</code>.</p>
 <p>Main files for manuscript:</p>
 <ul>
-<li><p><code>CENSUSBinPrep_updated.R</code> : Data binarization for the
+<li><p><code>CENSUSBinPrep_.R</code> : Data binarization for the
 multivariate Bernoulli mixture model.</p></li>
-<li><p><code>MBMMmodels_manuscript.R</code>: Multivariate Bernoulli
+<li><p><code>MBMMmodels_manuscript_.R</code>: Multivariate Bernoulli
 mixture model output processing, and figures.</p></li>
-<li><p><code>ECbayesbinmix_manuscript.R</code>: Tables and regression
+<li><p><code>ECbayesbinmix_manuscript_.R</code>: Tables and regression
 analysis.</p></li>
-<li><p><code>nsdoh_profiles_app_urban</code>: Folder containing code for
-the interactive map created with Shiny. This one contains the urban
+<li><p><code>nsdoh_profiles_app_edited</code>: Folder containing code
+for the interactive map created with Shiny. This one contains the urban
 boundaries.</p></li>
 </ul>
 
